# hsi_unmixing_lab

./: README.md  notes.md  pyproject.toml
data/: endmember_names.npy  extracted_endmembers.npy  unconstrained_abundances.npy
notebooks/: 01_data_exploration.ipynb  02_unconstrained_ls.ipynb  03_constrained_ls.ipynb  04_blind_unmixing.ipynb  solution.ipynb
scripts/: setup.py
src/: data_loader.py  metrics.py  optimization.py  synthetic_image_creator.py  visualization.py
